Fixed an issue with single select.  Added some element positioning to deal with times when the dropdown is cutoff on the right (left shift).  Also added handling of applying "dropup" class when, otherwise, the dropdown would be off the screen.

--- a/demo/multiselect/style.css
+++ b/demo/multiselect/style.css
@@ -42,12 +42,15 @@ multiselect {
     }
 
         multiselect > .btn-group > button > .caret {
-            border-left: 4px solid transparent;
-            border-right: 4px solid transparent;
-            border-top: 4px solid black;
             right: 5px;
             top: 45%;
             position: absolute;
+        }
+
+        multiselect > .btn-group:not(.dropup) > button > .caret {
+            border-left: 4px solid transparent;
+            border-right: 4px solid transparent;
+            border-top: 4px solid black;
         }
 
     multiselect .dropdown-menu > li > a {
